--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <maven.source.plugin>3.0.0</maven.source.plugin>
         <maven.staging.plugin>1.6.7</maven.staging.plugin>
         <maven.surefire.plugin>2.18.1</maven.surefire.plugin>
+        <maven.test.skip>true</maven.test.skip>
         <netty.version>4.1.42.Final</netty.version>
 
         <project.encoding>UTF-8</project.encoding>
